[gd_scene load_steps=7 format=3 uid="uid://do8o7vqodhnfd"]

[ext_resource type="Texture2D" uid="uid://vk004cm1gc5a" path="res://Assets/Imagenes/Decoracion/LvlN.png" id="1_qmvxn"]
[ext_resource type="Texture2D" uid="uid://cljcejjphyfpd" path="res://Assets/Imagenes/Decoracion/numb.png" id="2_7j1gt"]
[ext_resource type="Script" uid="uid://6gj0h315aplo" path="res://Scripts/Interruptores/BotonNivel.gd" id="2_njx7w"]
[ext_resource type="Texture2D" uid="uid://7yxd4twh1jxg" path="res://Assets/Imagenes/Decoracion/Lvl_locked.png" id="2_qpd82"]

[sub_resource type="AtlasTexture" id="AtlasTexture_njx7w"]
atlas = ExtResource("2_7j1gt")
region = Rect2(0, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpd82"]
atlas = ExtResource("2_7j1gt")
region = Rect2(0, 32, 30, 32)

[node name="BotonNivel" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_qmvxn")
texture_disabled = ExtResource("2_qpd82")
script = ExtResource("2_njx7w")
numeros_textura = ExtResource("2_7j1gt")

[node name="Puntuacion" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 7.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.6039216, 0.007843138, 0.003921569, 1)
bbcode_enabled = true
text = "[font_size=12][b]290[/b][/font_size]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContenedorCentrador" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 60.0
metadata/_edit_group_ = true

[node name="ContenedorHorizontal" type="HBoxContainer" parent="ContenedorCentrador"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Digito1" type="TextureRect" parent="ContenedorCentrador/ContenedorHorizontal"]
layout_mode = 2
texture = SubResource("AtlasTexture_njx7w")

[node name="Digito2" type="TextureRect" parent="ContenedorCentrador/ContenedorHorizontal"]
layout_mode = 2
texture = SubResource("AtlasTexture_qpd82")
